--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@verzth/ngx-statistic-collector",
-  "version": "0.0.1-alpha005",
+  "version": "0.0.2-3",
   "description": "",
   "main": "statistic.js",
   "repository": {
